# nengish-translator

./: .gitignore  CMakeLists.txt  LICENSE  README.md
Sources/: CMakeLists.txt  CommandLine.cpp  CommandLine.hpp  InvalidUsageException.hpp  Main.cpp  Mode.hpp  Options.hpp  TextToNengish.cpp  TextToNengish.hpp
